Finished the core functionality of the game

--- a/index.html
+++ b/index.html
@@ -33,11 +33,18 @@
     <div class="game">
         <div class="game-info">
             <h2 class="round"></h2>
-            <p class="player player1"></p>
-            <p class="score score1"></p>
+            <div class="player1-container">
+                <p class="player player1"></p>
+                <p class="score score1"></p>
+                <p class="pairs pairs1"></p>
+            </div>
 
-            <p class="player player2"></p>
-            <p class="score score2"></p>
+            <div class="player2-container">
+                <p class="player player2"></p>
+                <p class="score score2"></p>
+                <p class="pairs pairs2"></p>
+            </div>
+            <h2 class="winner"></h2>
         </div>
         <div class="img-container"></div>
     </div>
