--- a/index.html
+++ b/index.html
@@ -15,19 +15,9 @@
 <body>
     <div class="game-settings">
         <form class="from">
-            <label class="round-label">
-                How many rounds do you want to have?
-                <input type="number" class="round-input" required>
-            </label>
-            <label class="player-label player1-label">
-                What is the name of the first player?
-                <input type="text" class="player-input player1-input" required>
-            </label>
-            <label class="player-label player2-label">
-                What is the name of the second player?
-                <input type="text" class="player-input player2-input" required>
-            </label>
-            <button type="submit" class="submit-settings">Start Game</button>
+            <h3>Select game mode</h3>
+            <button type="button" class="mode-settings vsC">Player vs Computer</button>
+            <button type="button" class="mode-settings vsP">Player vs Player</button>
         </form>
     </div>
     <div class="game">
