Fixed up the styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap">
     <title>Memory Game</title>
 </head>
 
@@ -31,20 +31,23 @@
         </form>
     </div>
     <div class="game">
-        <div class="game-info">
-            <h2 class="round"></h2>
-            <div class="player1-container">
-                <p class="player player1"></p>
-                <p class="score score1"></p>
-                <p class="pairs pairs1"></p>
-            </div>
+        <div class="game-container">
+            <div class="game-info">
+                <h2 class="round"></h2>
+                <div class="players-container">
+                    <div class="player1-container">
+                        <p class="player player1"></p>
+                        <p class="score score1"></p>
+                        <p class="pairs pairs1"></p>
+                    </div>
 
-            <div class="player2-container">
-                <p class="player player2"></p>
-                <p class="score score2"></p>
-                <p class="pairs pairs2"></p>
+                    <div class="player2-container">
+                        <p class="player player2"></p>
+                        <p class="score score2"></p>
+                        <p class="pairs pairs2"></p>
+                    </div>
+                </div>
             </div>
-            <h2 class="winner"></h2>
         </div>
         <div class="img-container"></div>
     </div>
